Add reprocase for uncalled HeadResourceListener

--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -2,15 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html">
 
     <h:head>
         <title>PrimeFaces Test</title>
     </h:head>
     <h:body>
+<ui:composition template="/template.xhtml">
 
-        <h1>#{testView.testString}</h1>
+	<ui:define name="detailactions">
+		DETAILACTIONS
+	</ui:define>
 
+	<ui:define name="content">
+<!--         <h1>#{testView.testString}</h1> -->
+<!--         <p>#{testView.point}</p> -->
+<!--         <p>#{testView.point.isNew()}</p> -->
+        
+<!-- 		<ui:include src="empty.xhtml" > -->
+<!-- 			<ui:param name="one" value="#{testView.point}" /> -->
+<!-- 			<ui:param name="two" value="#{testView.point.isNew()}" /> -->
+<!-- 		</ui:include> -->
+	</ui:define>
+</ui:composition>
     </h:body>
 </html>
